--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js --exec babel-node"
+    "start": "nodemon index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "graphql": "^14.4.1",
     "graphql-tools": "^4.0.5",
+    "mongoose": "^5.6.2",
     "nodemon": "^1.19.1"
   }
 }
